// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator snapshots > generateEnvExample 1`] = `
"# Generated by @changsik00/node-settings.
# Re-run \`node-settings generate env-example\` to refresh.
# Required values are left blank — fill them in before booting the app.

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=local

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
"
`;

exports[`generator snapshots > generateEnvExample — unmasked secret defaults 1`] = `
"# Generated by @changsik00/node-settings.
# Re-run \`node-settings generate env-example\` to refresh.
# Required values are left blank — fill them in before booting the app.

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=local

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
"
`;

exports[`generator snapshots > generateK8sManifests — default (stringData secret) 1`] = `
{
  "configMap": "apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-config
  namespace: prod
  labels:
    app: "demo"
data:
  APP_ENV: "local"
  PORT: "3000"
  # TODO: required, no default — provide before deploy
  # Primary database host
  DB_HOST: ""
",
  "secret": "apiVersion: v1
kind: Secret
metadata:
  name: demo-secret
  namespace: prod
  labels:
    app: "demo"
type: Opaque
stringData:
  # DB_PASSWORD (required)
  # Primary database password
  DB_PASSWORD: "REPLACE_ME"
  # SENTRY_DSN (optional)
  # Sentry DSN
  SENTRY_DSN: "REPLACE_ME"
",
  "yaml": "apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-config
  namespace: prod
  labels:
    app: "demo"
data:
  APP_ENV: "local"
  PORT: "3000"
  # TODO: required, no default — provide before deploy
  # Primary database host
  DB_HOST: ""
---
apiVersion: v1
kind: Secret
metadata:
  name: demo-secret
  namespace: prod
  labels:
    app: "demo"
type: Opaque
stringData:
  # DB_PASSWORD (required)
  # Primary database password
  DB_PASSWORD: "REPLACE_ME"
  # SENTRY_DSN (optional)
  # Sentry DSN
  SENTRY_DSN: "REPLACE_ME"
",
}
`;

exports[`generator snapshots > generateK8sManifests — inlineSecretValues (base64 data) 1`] = `
{
  "configMap": "apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-config
data:
  APP_ENV: "local"
  PORT: "3000"
  # TODO: required, no default — provide before deploy
  # Primary database host
  DB_HOST: ""
",
  "secret": "apiVersion: v1
kind: Secret
metadata:
  name: demo-secret
type: Opaque
data:
  DB_PASSWORD: c3VwZXJzZWNyZXQ=
  SENTRY_DSN: aHR0cHM6Ly94QHkuaW8vMQ==
",
  "yaml": "apiVersion: v1
kind: ConfigMap
metadata:
  name: demo-config
data:
  APP_ENV: "local"
  PORT: "3000"
  # TODO: required, no default — provide before deploy
  # Primary database host
  DB_HOST: ""
---
apiVersion: v1
kind: Secret
metadata:
  name: demo-secret
type: Opaque
data:
  DB_PASSWORD: c3VwZXJzZWNyZXQ=
  SENTRY_DSN: aHR0cHM6Ly94QHkuaW8vMQ==
",
}
`;

exports[`generator snapshots > generateMarkdownDocs — custom title + intro 1`] = `
"# demo-service env

Owned by team-platform.

| Key | Type | Required | Default | Secret | Description |
| --- | ---- | -------- | ------- | ------ | ----------- |
| \`APP_ENV\` | enum (\`local\` \\| \`dev\` \\| \`prod\`) | no | \`local\` | — |  |
| \`PORT\` | \`number\` | no | \`3000\` | — |  |
| \`DB_HOST\` | \`string\` | yes | — | — | Primary database host |
| \`DB_PASSWORD\` | \`string\` | yes | — | yes | Primary database password |
| \`SENTRY_DSN\` | \`string\` | no | — | yes | Sentry DSN |

_Generated by [@changsik00/node-settings](https://github.com/Changsik00/node-settings)._
"
`;

exports[`generator snapshots > generateMarkdownDocs — default title 1`] = `
"# Environment Variables

| Key | Type | Required | Default | Secret | Description |
| --- | ---- | -------- | ------- | ------ | ----------- |
| \`APP_ENV\` | enum (\`local\` \\| \`dev\` \\| \`prod\`) | no | \`local\` | — |  |
| \`PORT\` | \`number\` | no | \`3000\` | — |  |
| \`DB_HOST\` | \`string\` | yes | — | — | Primary database host |
| \`DB_PASSWORD\` | \`string\` | yes | — | yes | Primary database password |
| \`SENTRY_DSN\` | \`string\` | no | — | yes | Sentry DSN |

_Generated by [@changsik00/node-settings](https://github.com/Changsik00/node-settings)._
"
`;

exports[`generator snapshots > generatePerEnvExamples — every branch 1`] = `
{
  "dev": "# .env example for APP_ENV=dev
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.
#
# When this env loads, the layered config resolves to:
#   bucket: "dev-bucket"
#   region: "us-east-1"
#   workerConcurrency: 1

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=dev

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
  "local": "# .env example for APP_ENV=local
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.
#
# When this env loads, the layered config resolves to:
#   bucket: "local-bucket"
#   region: "us-east-1"
#   workerConcurrency: 1

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=local

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
  "prod": "# .env example for APP_ENV=prod
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.
#
# When this env loads, the layered config resolves to:
#   bucket: "prod-bucket"
#   region: "us-east-1"
#   workerConcurrency: 8

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=prod

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
}
`;

exports[`generator snapshots > generatePerEnvExamples — without config summary 1`] = `
{
  "dev": "# .env example for APP_ENV=dev
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=dev

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
  "local": "# .env example for APP_ENV=local
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=local

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
  "prod": "# .env example for APP_ENV=prod
# Generated by @changsik00/node-settings.
# Required values are left blank — fill them in before booting the app.

# APP_ENV (enum, optional, enum: local|dev|prod, default: "local")
APP_ENV=prod

# PORT (number, optional, default: 3000)
PORT=3000

# DB_HOST (string, required)
# Primary database host
DB_HOST=


# --- Secrets ---

# DB_PASSWORD (string, required, secret)
# Primary database password
DB_PASSWORD=

# SENTRY_DSN (string, optional, secret)
# Sentry DSN
SENTRY_DSN=
",
}
`;
